--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <button class="image" onclick="
         playGame('Rock');
-    "><img src="./images/rock-emoji.png" width="50px"></button>
+    "><img src="./images/Rock-emoji.png" width="50px"></button>
 
     <button class="image" onclick="
         playGame('Paper');
-    "><img src="./images/paper-emoji.png" width="50px"></button>
+    "><img src="./images/Paper-emoji.png" width="50px"></button>
 
     <button class="image" onclick="
         playGame('Scissor');
-    "><img src="./images/scissor-emoji.png" width="50px"></button>
+    "><img src="./images/Scissor-emoji.png" width="50px"></button>
 
     <p class="js-result"></p>
     <p class="js-game-display"></p>
